syntax = "proto3";

package stats.V1;

option go_package = "internal/rpc/V1/stats";

//import "types.proto";

// todo
service StatsService {
  rpc Echo(EchoRequest) returns (EchoResponse) {}
}


message EchoRequest{
  string message = 1;
}

message EchoResponse{
  string messageResponse = 1;
}
